# test_ws_18112025

./: README.md  readme.md
my_gripper_hardware/: CMakeLists.txt  my_gripper_hardware_interface.xml  package.xml
my_gripper_hardware/include/: gripper_hardware_interface.hpp
my_gripper_hardware/src/: gripper_hardware_interface.cpp
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: qos_overrides.yaml  robot_moveit.rviz  skyentific_robot_controllers.yaml  topic_monitor_config.yaml
my_robot_bringup/launch/: robot.backup.launch.xml  robot.launch.py  robot.launch.xml  robot.test.launch.xml
my_robot_commander/: CMakeLists.txt  package.xml
my_robot_commander/src/: test_moveit.cpp
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/launch/: display.launch.xml
my_robot_description/meshes/: base_z_ob.stl  leftjaw.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_5_gripper.stl  rightjaw.stl
my_robot_description/urdf/: skyentific_robot.urdf.xacro  skyentific_robot_ros2_control.xacro
my_robot_hardware/: CMakeLists.txt  my_robot_hardware_interface.xml  package.xml
my_robot_hardware/config/: arm_hardware.yaml
my_robot_hardware/include/: PhidgetStepper.hpp  PhidgetsStepperDriver.hpp  arm_interface.hpp
my_robot_hardware/src/: arm_hardware_interface.cpp
my_robot_homing/: CMakeLists.txt  phidget_homer.cpp
my_robot_homing/launch/: homing.bringup.launch.py
my_robot_moveit_config/: package.xml
my_robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  rviz_params.yaml  skyentific_robot.ros2_control.xacro  skyentific_robot.srdf  skyentific_robot.urdf.xacro
my_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
my_robot_safety/: CMakeLists.txt  package.xml
my_robot_safety/config/: limit_switch_watcher.yaml
my_robot_safety/launch/: daq1301_inputs.launch.py  safety_bringup.launch.py
my_robot_safety/src/: limit_switch_watcher_node.cpp  oldcode.md
my_robot_world/: CMakeLists.txt  package.xml
my_robot_world/launch/: add_world_objects.launch.py
my_robot_world/meshes/: game.mtl  muntje.stl
my_robot_world/src/: add_world_objects.cpp
