<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_safety</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jan@todo.todo">jan</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>libphidget22</exec_depend>
  <exec_depend>phidgets_digital_inputs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>controller_manager_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
