<?xml version="1.0"?>
<package format="3">
  <name>my_robot_world</name>
  <version>0.1.0</version>
  <description>World objects for MoveIt: adds STL meshes to the Planning Scene.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build deps -->
  <build_depend>rclcpp</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Exec/runtime deps -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>geometric_shapes</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
